--- a/clustering_for_log_error_final.ipynb
+++ b/clustering_for_log_error_final.ipynb
@@ -2015,7 +2015,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -2030,6 +2030,8 @@
    ],
    "source": [
     "# Create linear model\n",
+    "X_train = train_scaled[['lot_size','age','full_value','longitude','latitude','square_footage']]\n",
+    "y_train = train_scaled[['logerror']]\n",
     "lm = LinearRegression()\n",
     "# Use Recursive feature selection to find top 3 features\n",
     "rfe = RFE(lm, 3)\n",
@@ -2041,17 +2043,17 @@
     "y_pred = lm.predict(X_rfe)\n",
     "\n",
     "rmse_lm_train = np.sqrt(mean_squared_error(y_train, y_pred))\n",
-    "r2_rf_train = r2_score(y_train, y_pred)\n",
+    "r2_lm_train = r2_score(y_train, y_pred)\n",
     "\n",
-    "predictions['rsme_rf'] = ('{:.4f}'.format(rmse_lm_train))\n",
+    "predictions['rsme_lm'] = ('{:.4f}'.format(rmse_lm_train))\n",
     "print('This is the train dataset model performance')\n",
-    "print(f'RSME = {rmse_rf_train:.4f}')\n",
-    "print(f'R2 score =  {r2_rf_train:.4f}')"
+    "print(f'RSME = {rmse_lm_train:.4f}')\n",
+    "print(f'R2 score =  {r2_lm_train:.4f}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -2078,6 +2080,7 @@
        "      <th>actual</th>\n",
        "      <th>rsme_baseline</th>\n",
        "      <th>rsme_rf</th>\n",
+       "      <th>rsme_lm</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -2086,10 +2089,12 @@
        "      <td>0.824503</td>\n",
        "      <td>0.0216</td>\n",
        "      <td>0.0216</td>\n",
+       "      <td>0.0216</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>76378</td>\n",
        "      <td>0.574090</td>\n",
+       "      <td>0.0216</td>\n",
        "      <td>0.0216</td>\n",
        "      <td>0.0216</td>\n",
        "    </tr>\n",
@@ -2098,10 +2103,12 @@
        "      <td>0.590715</td>\n",
        "      <td>0.0216</td>\n",
        "      <td>0.0216</td>\n",
+       "      <td>0.0216</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>35048</td>\n",
        "      <td>0.587234</td>\n",
+       "      <td>0.0216</td>\n",
        "      <td>0.0216</td>\n",
        "      <td>0.0216</td>\n",
        "    </tr>\n",
@@ -2110,8 +2117,10 @@
        "      <td>0.590348</td>\n",
        "      <td>0.0216</td>\n",
        "      <td>0.0216</td>\n",
+       "      <td>0.0216</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -2122,10 +2131,12 @@
        "      <td>0.591724</td>\n",
        "      <td>0.0216</td>\n",
        "      <td>0.0216</td>\n",
+       "      <td>0.0216</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>75433</td>\n",
        "      <td>0.550215</td>\n",
+       "      <td>0.0216</td>\n",
        "      <td>0.0216</td>\n",
        "      <td>0.0216</td>\n",
        "    </tr>\n",
@@ -2134,10 +2145,12 @@
        "      <td>0.599864</td>\n",
        "      <td>0.0216</td>\n",
        "      <td>0.0216</td>\n",
+       "      <td>0.0216</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>47816</td>\n",
        "      <td>0.586344</td>\n",
+       "      <td>0.0216</td>\n",
        "      <td>0.0216</td>\n",
        "      <td>0.0216</td>\n",
        "    </tr>\n",
@@ -2146,30 +2159,31 @@
        "      <td>0.590333</td>\n",
        "      <td>0.0216</td>\n",
        "      <td>0.0216</td>\n",
+       "      <td>0.0216</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>41951 rows × 3 columns</p>\n",
+       "<p>41951 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "         actual rsme_baseline rsme_rf\n",
-       "44758  0.824503        0.0216  0.0216\n",
-       "76378  0.574090        0.0216  0.0216\n",
-       "3539   0.590715        0.0216  0.0216\n",
-       "35048  0.587234        0.0216  0.0216\n",
-       "31603  0.590348        0.0216  0.0216\n",
-       "...         ...           ...     ...\n",
-       "36123  0.591724        0.0216  0.0216\n",
-       "75433  0.550215        0.0216  0.0216\n",
-       "72386  0.599864        0.0216  0.0216\n",
-       "47816  0.586344        0.0216  0.0216\n",
-       "14920  0.590333        0.0216  0.0216\n",
+       "         actual rsme_baseline rsme_rf rsme_lm\n",
+       "44758  0.824503        0.0216  0.0216  0.0216\n",
+       "76378  0.574090        0.0216  0.0216  0.0216\n",
+       "3539   0.590715        0.0216  0.0216  0.0216\n",
+       "35048  0.587234        0.0216  0.0216  0.0216\n",
+       "31603  0.590348        0.0216  0.0216  0.0216\n",
+       "...         ...           ...     ...     ...\n",
+       "36123  0.591724        0.0216  0.0216  0.0216\n",
+       "75433  0.550215        0.0216  0.0216  0.0216\n",
+       "72386  0.599864        0.0216  0.0216  0.0216\n",
+       "47816  0.586344        0.0216  0.0216  0.0216\n",
+       "14920  0.590333        0.0216  0.0216  0.0216\n",
        "\n",
-       "[41951 rows x 3 columns]"
+       "[41951 rows x 4 columns]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
