--- a/clustering_for_log_error_final.ipynb
+++ b/clustering_for_log_error_final.ipynb
@@ -45,12 +45,50 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Executive Summary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ab22c4c9ee324596ab350a8abcc93ca2",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(Button(description='Our Conclusion', style=ButtonStyle()), Output(outputs=({'output_type': 'str…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "conclusion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<button class=\"button-save large\">[Clustering Zillow Logerror](https://chasethompson.github.io)</button>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<a id='Project_Plan'></a>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,30 +149,9 @@
     "# some handy functions to use along widgets\n",
     "from IPython.display import display, Markdown, clear_output\n",
     "# widget packages\n",
-    "import ipywidgets as widgets"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8d6248e6f9564c67beb1eac20cb6bd49",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VBox(children=(Button(description='Our Conclusion', style=ButtonStyle()), Output()))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
+    "import ipywidgets as widgets\n",
+    "\n",
+    "# our conclusion button\n",
     "button = widgets.Button(description='Our Conclusion')\n",
     "out = widgets.Output()\n",
     "def on_button_clicked(_):\n",
@@ -147,15 +164,15 @@
     "          print('The \"best\" performing model was a decision tree.')\n",
     "# linking button and function together using a button's method\n",
     "button.on_click(on_button_clicked)\n",
-    "# displaying button and its output together\n",
-    "widgets.VBox([button,out])"
+    "\n",
+    "conclusion = widgets.VBox([button,out])"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<button class=\"button-save large\">[Clustering Zillow Logerror](https://chasethompson.github.io)</button>"
+    "<a id='acquire_data'></a>"
    ]
   },
   {
@@ -723,13 +740,6 @@
    ],
    "source": [
     "df.shape"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a id='acquire_data'></a>"
    ]
   },
   {
@@ -3102,6 +3112,15 @@
     "print('This is the test dataset model performance')\n",
     "print(f'RSME = {rmse_rf_test:.15f}')\n",
     "print(f'R2 score =  {r2_rf_test:.4f}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pred"
    ]
   },
   {
