--- a/clustering_for_log_error_final.ipynb
+++ b/clustering_for_log_error_final.ipynb
@@ -121,7 +121,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<button class=\"button-save large\">[Clustering Zillow Logerror](https://chasethompson.github.io)</button>"
+    "<button class=\"button-save large\">[Clustering Zillow Logerror](https://chasethompson.github.io/#)</button>"
    ]
   },
   {
