--- a/clustering_for_log_error_final.ipynb
+++ b/clustering_for_log_error_final.ipynb
@@ -1583,7 +1583,9 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
